--- a/flutter_application_1/pubspec.yaml
+++ b/flutter_application_1/pubspec.yaml
@@ -30,6 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  network_info_plus: ^4.0.2
+  dart_ping: ^4.0.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
