--- a/flutter_application_1/pubspec.yaml
+++ b/flutter_application_1/pubspec.yaml
@@ -30,8 +30,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  network_info_plus: ^4.0.2
   dart_ping: ^4.0.0
+  shared_preferences: ^2.1.0
+  ssh2: 2.2.3
+  network_info_plus: ^3.0.0  # Or any plugin you're using
+
 
 
 
